--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ footer {
   display: inline-block;
   width: 60px;
   height: 34px;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .switch input {
