--- a/style.css
+++ b/style.css
@@ -14,8 +14,6 @@ body {
   align-items: center;
   min-height: 100vh;
   margin: 0;
-  background-color: #2c2c2c; /* Dark gray background */
-  color: #e0e0e0; /* Light text color */
 }
 main {
   flex-grow: 1;
@@ -137,14 +135,14 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-/* Light Mode (default) */
+/* Dark Mode (default) */
 body {
-  background-color: #ffffff; /* Light background */
-  color: #000000; /* Dark text color */
-}
-
-/* Dark Mode */
-body.dark-mode {
   background-color: #2c2c2c; /* Dark gray background */
   color: #e0e0e0; /* Light text color */
+}
+
+/* Light Mode */
+body.light-mode {
+  background-color: #ffffff; /* Light background */
+  color: #000000; /* Dark text color */
 }
