--- a/style.css
+++ b/style.css
@@ -65,7 +65,9 @@ p {
   font-size: 1.2rem;
   line-height: 1.8;
   max-width: 700px;
-  margin-bottom: 30px;
+  margin: 0 auto 30px;
+  text-align: center;
+  padding: 0 15px;
 }
 
 /* Logo Styles */
